--- a/build.gradle
+++ b/build.gradle
@@ -28,5 +28,8 @@ dependencies {
     
     // https://mvnrepository.com/artifact/org.json/json
 	implementation group: 'org.json', name: 'json', version: '20220320'
+	
+	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
     
 }
