--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@
 plugins {
     // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
+    id "application"
 }
 
 repositories {
@@ -32,4 +33,12 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
 	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
     
+}
+
+ext {
+    javaMainClass = "runner.DoTest"
+}
+
+application {
+    mainClassName = javaMainClass
 }
