--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ plugins {
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
@@ -34,7 +35,9 @@ dependencies {
 	
 	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
 	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
-    
+
+    // Ascii table
+    implementation 'de.vandermeer:asciitable:0.3.2'
 }
 
 ext {
